; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/qcom/venus/extr_vdec.c_vdec_cancel_dst_buffers.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/qcom/venus/extr_vdec.c_vdec_cancel_dst_buffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.venus_inst = type { i32 }
%struct.vb2_v4l2_buffer = type { i32 }

@VB2_BUF_STATE_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.venus_inst*)* @vdec_cancel_dst_buffers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vdec_cancel_dst_buffers(%struct.venus_inst* %0) #0 {
  %2 = alloca %struct.venus_inst*, align 8
  %3 = alloca %struct.vb2_v4l2_buffer*, align 8
  store %struct.venus_inst* %0, %struct.venus_inst** %2, align 8
  br label %4

4:                                                ; preds = %10, %1
  %5 = load %struct.venus_inst*, %struct.venus_inst** %2, align 8
  %6 = getelementptr inbounds %struct.venus_inst, %struct.venus_inst* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.vb2_v4l2_buffer* @v4l2_m2m_dst_buf_remove(i32 %7)
  store %struct.vb2_v4l2_buffer* %8, %struct.vb2_v4l2_buffer** %3, align 8
  %9 = icmp ne %struct.vb2_v4l2_buffer* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %4
  %11 = load %struct.vb2_v4l2_buffer*, %struct.vb2_v4l2_buffer** %3, align 8
  %12 = load i32, i32* @VB2_BUF_STATE_ERROR, align 4
  %13 = call i32 @v4l2_m2m_buf_done(%struct.vb2_v4l2_buffer* %11, i32 %12)
  br label %4

14:                                               ; preds = %4
  ret void
}

declare dso_local %struct.vb2_v4l2_buffer* @v4l2_m2m_dst_buf_remove(i32) #1

declare dso_local i32 @v4l2_m2m_buf_done(%struct.vb2_v4l2_buffer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
